--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,38 +15,65 @@
 </head>
 
 <body>
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <div class="contenedorPrincipal">
         <!-- Inicio del header -->
         <header class="contenedorHeader">
-            <img src="img/logo.png" alt="" class="logo">
-            <!-- inicio nav -->
-            <nav>
-                <ul class="listaNav">
-                    <li><a class="local">Inicio</a></li>
-                    <li><a href="views/productos.html">Productos </a></li>
-                    <li><a href="views/nuestroTrabajo.html">Nuestro Trabajo </a></li>
-                    <li><a href="views/contactos.html">Contacto </a></li>
-                    <li><a href="views/ubicacion.html">Ubicación </a></li>
-                </ul>
+        </header>
+        <main>
+        <!-- inicio nav -->
+            <nav class="navbar navbar-expand-lg navbar fixed-top bg-light">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">
+                        <img src="/img/logo.png" class="logo">
+                    </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item nav-pills nav-fill">
+                            <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="views/productos.html">Productos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="views/nuestroTrabajo.html">
+                            Nuestro Trabajo
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/views/contactos.html">Contactos</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                </div>
+                </div>
             </nav>
             <!-- Cierro nav-->
             
-        </header>
-        <h1> <span>Design</span> Muebles </h1>
-        <div>
-            <img class="imagen_inicio" src="img/foto_inicio.jpg">
-            <h5 class="parrafo">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce justo libero, pulvinar eu mollis sit amet, egestas porta nunc. Phasellus eleifend ante diam, pulvinar consectetur lacus pellentesque ac. Sed eu odio eu nisi maximus sodales in at sem. Proin vitae vehicula ligula, tristique hendrerit mauris. Donec bibendum volutpat purus, nec vulputate lacus ultrices hendrerit. In pulvinar felis et tortor mollis, eget pharetra neque fermentum. Nulla molestie quis neque non gravida. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-            </h5>
-            <h5 class="tituloAbajo">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur, possimus quam quod eveniet ab eligendi deleniti ea corrupti. Ad corrupti eius accusamus? Illum eligendi, earum esse explicabo architecto molestias veniam!
-            </h5>
-            <img class="sillon" src="img/sillon.png" alt="">
-            <img class="mesaRatona" src="img/mesaRatona.png">
-        </div>
-        <div class="wave">
-            <img src="img/wave.svg" alt="">
-        </div>
+            <h1 class="titulo"> <span>Design</span> Muebles </h1>
+            <div>
+                <img class="imagen_inicio" src="img/foto_inicio.jpg">
+                <h5 class="parrafo">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce justo libero, pulvinar eu mollis sit amet, egestas porta nunc. Phasellus eleifend ante diam, pulvinar consectetur lacus pellentesque ac. Sed eu odio eu nisi maximus sodales in at sem. Proin vitae vehicula ligula, tristique hendrerit mauris. Donec bibendum volutpat purus, nec vulputate lacus ultrices hendrerit. In pulvinar felis et tortor mollis, eget pharetra neque fermentum. Nulla molestie quis neque non gravida. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+                </h5>
+                <h5 class="tituloAbajo">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur, possimus quam quod eveniet ab eligendi deleniti ea corrupti. Ad corrupti eius accusamus? Illum eligendi, earum esse explicabo architecto molestias veniam!
+                </h5>
+                <img class="sillon" src="img/sillon.png" alt="">
+                <img class="mesaRatona" src="img/mesaRatona.png">
+            </div>
+            <div class="wave">
+                <img src="img/wave.svg" alt="">
+            </div>
+        </main>
+
         <footer class="contenedorFooter">
             Design Muebles©. Todos los derechos reservados.
 
