--- a/index.html
+++ b/index.html
@@ -47,10 +47,13 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/views/contactos.html">Contactos</a>
                         </li>
+                        <li class="nav-item nav-pills nav-fill">
+                            <a class="nav-link" href="/views/ubicacion.html">Ubicación</a>
+                        </li>
                     </ul>
                     <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
+                    <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Buscar</button>
                     </form>
                 </div>
                 </div>
